fixed(CSS slider pagination)main page hero slider pagination goes under the slides, so it’s not overlap

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -12,7 +12,7 @@
   .hero__slider-pagination {
     position: absolute;
     left: 0;
-    bottom: 10px;
+    bottom: -25px;
     width: 100%;
     text-align: center;
 
